--- a/Programacion-Web-2025/MiPaginaWeb.html
+++ b/Programacion-Web-2025/MiPaginaWeb.html
@@ -19,7 +19,7 @@
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:url" content="https://nicward69.github.io/Programacion-Web-2025/metas.html">
+    <meta property="og:url" content="https://nicward69.github.io/Programacion-Web-2025/MiPaginaWeb.html">
     <meta property="og:site_name" content="Mi Página Web Llamativa">
     
     <!-- Twitter Cards para Twitter -->
@@ -40,7 +40,7 @@
     </div>
 
     <div class="content">
-        <h1>Cámara Torres César Augústo</h1>
+        <h1>Cámara Torres César Augusto</h1>
         
         <div class="bibliography">
             <h2>Bibliografía</h2>
