--- a/Programacion-Web-2025/MiPaginaWeb.html
+++ b/Programacion-Web-2025/MiPaginaWeb.html
@@ -12,7 +12,7 @@
     
     <!-- Open Graph para Facebook, WhatsApp y MS Teams -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Mi Página Web Llamativa">
+    <meta property="og:title" content="Mi introduccion: Camara Torres Cesar">
     <meta property="og:description" content="Explora la información y bibliografía editable de Cámara Torres César Augusto.">
     <meta property="og:image" content="https://nicward69.github.io/Programacion-Web-2025/Imagenes/preview.jpg">
     <meta property="og:image:secure_url" content="https://nicward69.github.io/Programacion-Web-2025/Imagenes/preview.jpg">
@@ -24,7 +24,7 @@
     
     <!-- Twitter Cards para Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Mi Página Web Llamativa">
+    <meta name="twitter:title" content="Mi introduccion: Camara Torres Cesar">
     <meta name="twitter:description" content="Explora la información y bibliografía editable de Cámara Torrez César Augusto.">
     <meta name="twitter:image" content="https://nicward69.github.io/Programacion-Web-2025/Imagenes/preview.jpg">
     <meta name="twitter:url" content="https://nicward69.github.io/Programacion-Web-2025/MiPaginaWeb.html">
