--- a/Programacion-Web-2025/MiPaginaWeb.html
+++ b/Programacion-Web-2025/MiPaginaWeb.html
@@ -13,19 +13,19 @@
     <!-- Open Graph para Facebook, WhatsApp y MS Teams -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Mi introduccion: Camara Torres Cesar">
-    <meta property="og:description" content="Explora la información y bibliografía editable de Cámara Torres César Augusto.">
+    <meta property="og:description" content="Explora la información y bibliografía de Cámara Torres César Augusto.">
     <meta property="og:image" content="https://nicward69.github.io/Programacion-Web-2025/Imagenes/preview.jpg">
     <meta property="og:image:secure_url" content="https://nicward69.github.io/Programacion-Web-2025/Imagenes/preview.jpg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:url" content="https://nicward69.github.io/Programacion-Web-2025/MiPaginaWeb.html">
-    <meta property="og:site_name" content="Mi Página Web Llamativa">
+    <meta property="og:site_name" content="Mi introduccion: Camara Torres Cesar">
     
     <!-- Twitter Cards para Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Mi introduccion: Camara Torres Cesar">
-    <meta name="twitter:description" content="Explora la información y bibliografía editable de Cámara Torrez César Augusto.">
+    <meta name="twitter:description" content="Explora la información y bibliografía de Cámara Torrez César Augusto.">
     <meta name="twitter:image" content="https://nicward69.github.io/Programacion-Web-2025/Imagenes/preview.jpg">
     <meta name="twitter:url" content="https://nicward69.github.io/Programacion-Web-2025/MiPaginaWeb.html">
     <meta name="twitter:site" content="@TuCuentaTwitter"> <!-- (Opcional, es para el usuario de Twitter) -->
