--- a/Programacion-Web-2025/MiPaginaWeb.html
+++ b/Programacion-Web-2025/MiPaginaWeb.html
@@ -7,7 +7,7 @@
     
     <!-- Meta etiquetas básicas -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Página de presentación de Cámara Torres César Augusto con bibliografía editable y contenido personalizado.">
+    <meta name="description" content="Página de presentación de Cámara Torres César Augusto con bibliografía y contenido personalizado.">
     <meta name="author" content="César Augusto Cámara Torres">
     
     <!-- Open Graph para Facebook, WhatsApp y MS Teams -->
