--- a/Etiquetas-de-agrupacion/index.html
+++ b/Etiquetas-de-agrupacion/index.html
@@ -6,11 +6,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <header>
+            <!--Aqui iria el header-->
+        </header>
+        <main
         <h1>practica de etiquetas de agrupamiento</h1>
         <h2>practica de etiquetas de agrupamiento</h2>
         <h3>practica de etiquetas de agrupamiento</h3>
         <h4>practica de etiquetas de agrupamiento</h4>
         <h5>practica de etiquetas de agrupamiento</h5>
         <h6>practica de etiquetas de agrupamiento</h6>
+        </main>
+        <footer>
+            <!--Aqui iria el footer-->
+        </footer>
     </body>
 </html>
