--- a/Etiquetas-de-agrupacion/index.html
+++ b/Etiquetas-de-agrupacion/index.html
@@ -7,9 +7,10 @@
     </head>
     <body>
         <header>
-            <!--Aqui iria el header-->
+            <img src="left-image.jpg" alt="Left Image" style="float: left;">
+            <img src="right-image.jpg" alt="Right Image" style="float: right;">
         </header>
-        <main
+        <main>
         <h1>practica de etiquetas de agrupamiento</h1>
         <h2>practica de etiquetas de agrupamiento</h2>
         <h3>practica de etiquetas de agrupamiento</h3>
@@ -18,7 +19,8 @@
         <h6>practica de etiquetas de agrupamiento</h6>
         </main>
         <footer>
-            <!--Aqui iria el footer-->
+            <p>Contacto: contacto@example.com</p>
+            <p>Teléfono: +123456789</p>
         </footer>
     </body>
 </html>
