--- a/Programacion-Web-2025/Programacion-Web-2025.html
+++ b/Programacion-Web-2025/Programacion-Web-2025.html
@@ -19,7 +19,7 @@
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:url" content="https://nicward69.github.io/Programacion-Web-2025/MiPaginaWeb.html">
+    <meta property="og:url" content="https://nicward69.github.io/Programacion-Web-2025/Programacion-Web-2025.html">
     <meta property="og:site_name" content="Mi introduccion: Camara Torres Cesar">
     
     <!-- Twitter Cards para Twitter -->
@@ -27,20 +27,26 @@
     <meta name="twitter:title" content="Mi introduccion: Camara Torres Cesar">
     <meta name="twitter:description" content="Explora la información y bibliografía de Cámara Torrez César Augusto.">
     <meta name="twitter:image" content="https://nicward69.github.io/Programacion-Web-2025/Imagenes/preview.jpg">
-    <meta name="twitter:url" content="https://nicward69.github.io/Programacion-Web-2025/MiPaginaWeb.html">
+    <meta name="twitter:url" content="https://nicward69.github.io/Programacion-Web-2025/Programacion-Web-2025.html">
     <meta name="twitter:site" content="@TuCuentaTwitter"> <!-- (Opcional, es para el usuario de Twitter) -->
 
     <!-- Favicon -->
     <link rel="icon" href="https://nicward69.github.io/Programacion-Web-2025/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <div class="corner-images">
-        <img src="Imagenes/itch.png" alt="ITCH Logo" class="left-image">
-        <img src="Imagenes/tecnm.png" alt="TecNM Logo" class="right-image">
-    </div>
+    <header>
+        <div class="corner-images">
+            <img src="Imagenes/itch.png" alt="ITCH Logo" class="left-image">
+            <img src="Imagenes/tecnm.png" alt="TecNM Logo" class="right-image">
+        </div>
+        <ul class = "navigation">
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="/Programacion-Web-2025/Programacion-Web-2025.html">Programacion Web 2025</a></li>
+        </ul>
+    </header>
 
     <div class="content">
-        <h1>Cámara Torres César Augusto</h1>
+        <h1>Pagina 2</h1>
         
         <div class="bibliography">
             <h2>Bibliografía</h2>
@@ -52,5 +58,13 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="contacto">
+            <p>+52 983-103-8044</p>
+            <p>L22390469@chetumal.tecnm.mx</p>
+            <p>Chetumal, Quintana Roo, México</p>
+            <p>Instituto Tecnologico de Chetumal</p>
+        </div>
+    </footer>
 </body>
 </html>
