--- a/index.html
+++ b/index.html
@@ -34,17 +34,22 @@
     <link rel="icon" href="https://nicward69.github.io/Programacion-Web-2025/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <div class="corner-images">
-        <img src="Imagenes/itch.png" alt="ITCH Logo" class="left-image">
-        <img src="Imagenes/tecnm.png" alt="TecNM Logo" class="right-image">
-    </div>
-
+    <header>
+        <div class="corner-images">
+            <img src="Imagenes/itch.png" alt="ITCH Logo" class="left-image">
+            <img src="Imagenes/tecnm.png" alt="TecNM Logo" class="right-image">
+        </div>
+        <ul class = "navigation">
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="/Programacion-Web-2025/MiPaginaWeb.html">Programacion Web 2025</a></li>
+        </ul>
+    </header>
     <div class="content">
         <h1>Cámara Torres César Augusto</h1>
         
         <div class="bibliography">
             <h2>Bibliografía</h2>
-            <div class="editable-content" contenteditable="true">
+            <div class="cuerpo" contenteditable="false">
                 <!-- Contenido editable -->
                 <p>1. Estudiante en ingenieria en sistemas computacionales.</p>
                 <p>2. Ingresado en 2022.</p>
@@ -52,5 +57,13 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="contacto">
+            <p>+52 983-103-8044</p>
+            <p>L22390469@chetumal.tecnm.mx</p>
+            <p>Chetumal, Quintana Roo, México</p>
+            <p>Instituto Tecnologico de Chetumal</p>
+        </div>
+    </footer>
 </body>
 </html>
