--- a/Programacion-Web-2025/Programacion-Web-2025.html
+++ b/Programacion-Web-2025/Programacion-Web-2025.html
@@ -46,15 +46,15 @@
     </header>
 
     <div class="content">
-        <h1>Pagina 2</h1>
+        <h1>Programacion Web 2025</h1>
         
-        <div class="bibliography">
-            <h2>Bibliografía</h2>
-            <div class="editable-content" contenteditable="true">
-                <!-- Contenido editable -->
-                <p>1. Estudiante en ingenieria en sistemas computacionales.</p>
-                <p>2. Ingresado en 2022.</p>
-                <p>3. Nacido el 6 de Agosto del 2003</p>
+        <div class="description">
+            <h2>Descripcion</h2>
+            <div class="editable-content" contenteditable="false">
+                <p>
+                    Esta seccion es una pagina dedicada a la materia de mi carrera, en la cual se mostrara contenido de la materia y ejemplos de la misma.
+                    Esto con el fin de mostrar mis conocimientos y habilidades en la materia y las practicas que se aplicaran.
+                </p>
             </div>
         </div>
     </div>
