--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img src="Imagenes/tecnm.png" alt="TecNM Logo" class="right-image">
         </div>
         <ul class = "navigation">
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="/index.html">Inicio</a></li>
             <li><a href="/Programacion-Web-2025/Programacion-Web-2025.html">Programacion Web 2025</a></li>
         </ul>
     </header>
