--- a/index.html
+++ b/index.html
@@ -50,11 +50,38 @@
         <div class="bibliography">
             <h2>Bibliografía</h2>
             <div class="cuerpo" contenteditable="false">
-                <!-- Contenido editable -->
-                <p>1. Estudiante en ingenieria en sistemas computacionales.</p>
-                <p>2. Ingresado en 2022.</p>
-                <p>3. Nacido el 6 de Agosto del 2003</p>
+                <p>
+                    <strong>Yo soy César Augusto Cámara Torres</strong>, estudiante de la carrera de Ingeniería en Sistemas Computacionales en el Instituto Tecnológico de Chetumal.
+                    Naci el 3 de agosto del 2003 en Chetumal, Quintana Roo, México. Esta es una pequeña bibliografía sobre mi persona.
+                    Como se a podido comprobar, esta pagina web es tanto comp un proyecto personal y como un proyecto escolar de mi materia de Proragramacion Web.
+                    En esta pagina se mostrara contenido de la materia y ejemplos de la misma, con el fin de mostrar mis conocimientos y habilidades en la materia y las practicas que se aplicaran.
+                </p>
             </div>
+
+            <h2>Intereses</h2>
+            <div>
+                <p>
+                    Mis intereses son la programación, la tecnología, la música, los videojuegos y la lectura.
+                    Me gusta aprender cosas nuevas y aplicarlas en mi vida diaria.
+                    Me gusta la programación porque me permite crear cosas nuevas y poder aplicarlos en mi dia a dia.
+                    Me gusta la tecnología porque me permite estar al día con las últimas tendencias y novedades, mis temas favoritos serian los temas de hardware y videojuegos de moda.
+                    Me gusta la música porque me relaja y me inspira.
+                    Me gustan los videojuegos, como yo quiero creer que cada programador, y estoy muy interesado por la creacion y diseño de videojuegos.
+                    Me gusta la lectura porque me permite aprender gramatica, ortografia y vocabulario, esto porque me gusta leer en otros ideomas.
+                    Me gusta mucho la  historia, la ciencia ficcion y low-fantasy. Esto porque siempre me a gustado los diferentes periodos de la historia y las cuantas historia que se pueden contar de ellas.
+                </p>
+            </div>
+
+            <h2>Proyectos</h2>
+            <div>
+                <p>
+                    Actualmente no tengo proyectos personales, ya que e estado ocupado con la escuela y con la creacion de esta pagina web.
+                    Un proyecto que tengo planeado a futuro, es el de hacer una armadura medieval. Esto porque me interesa mucho el deporte de <strong>Buhurt</strong>
+                    y me gustaria tener mi propia armadura para poder competir en torneos (incluso si no estoy con el fisico), el echo de poder experimentar algo asi siempre me a gustado.
+
+                    Otro proyecto o mas bien proyectos, son el de modificar videojuegos, ya que me gustaria poder modificar videojuegos y poder crear mis propios mods en muchos juegos y usarlos para la practica de la creacion de videojuegos.
+                    
+                </p>
         </div>
     </div>
     <footer>
