--- a/Programacion-Web-2025/Programacion-Web-2025.html
+++ b/Programacion-Web-2025/Programacion-Web-2025.html
@@ -48,13 +48,52 @@
     <div class="content">
         <h1>Programacion Web 2025</h1>
         
-        <div class="description">
+        <div class="descripcion">
             <h2>Descripcion</h2>
             <div class="editable-content" contenteditable="false">
                 <p>
                     Esta seccion es una pagina dedicada a la materia de mi carrera, en la cual se mostrara contenido de la materia y ejemplos de la misma.
                     Esto con el fin de mostrar mis conocimientos y habilidades en la materia y las practicas que se aplicaran.
                 </p>
+            </div>
+        </div>
+
+        <div class="practicas">
+            <h2>Practicas</h2>
+            <div class="selectorDeArchivos">
+                <label for="carpetaDePracticas">Selecciona una carpeta de práctica:</label>
+                <input type="archivos" id="carpetaDePracticas" webkitdirectory directory>
+            </div>
+            <div class="impresionDePracticas">
+                <h3 id="tituloDePractica">Título de la práctica</h3>
+                <p id="descripcionDePractica">Descripción de la práctica.</p>
+                <div id="elementosUsados">
+                    <h4>Elementos usados:</h4>
+                    <ul>
+                        <!-- Lista de elementos -->
+                    </ul>
+                </div>
+                <div id="resultadoDePractica">
+                    <h4>Resultado:</h4>
+                    <iframe id="iframePractica" src="" frameborder="0"></iframe>
+                </div>
+            </div>
+            <div class="practica-etiquetas-agrupamiento">
+                <h3>Etiquetas de agrupamiento</h3>
+                <p>Esta práctica muestra el uso de etiquetas de agrupamiento en HTML, como encabezados y agrupaciones de contenido.</p>
+                <div id="elementosUsados">
+                    <h4>Elementos usados:</h4>
+                    <ul>
+                        <li>&lt;header&gt;</li>
+                        <li>&lt;main&gt;</li>
+                        <li>&lt;footer&gt;</li>
+                        <li>&lt;h1&gt; a &lt;h6&gt;</li>
+                    </ul>
+                </div>
+                <div id="resultadoDePractica">
+                    <h4>Resultado:</h4>
+                    <iframe id="iframePracticaEtiquetas" src="../Etiquetas-de-agrupacion/index.html" frameborder="0"></iframe>
+                </div>
             </div>
         </div>
     </div>
@@ -66,5 +105,17 @@
             <p>Instituto Tecnologico de Chetumal</p>
         </div>
     </footer>
+    <script>
+        document.getElementById('carpetasDePracicas').addEventListener('change', function(event) {
+            const files = event.target.files;
+            if (files.length > 0) {
+                const folderPath = URL.createObjectURL(files[0]);
+                document.getElementById('iframePractica').src = folderPath;
+                document.getElementById('tituloDePractica').textContent = "Práctica seleccionada";
+                document.getElementById('descripcionDePracticas').textContent = "Descripción generada automáticamente.";
+                // Aquí puedes agregar lógica para listar elementos usados si es necesario.
+            }
+        });
+    </script>
 </body>
 </html>
