Se añadio la practica de Etiquetas semanticas HTML 5

--- a/Programacion-Web-2025/Programacion-Web-2025.html
+++ b/Programacion-Web-2025/Programacion-Web-2025.html
@@ -65,7 +65,7 @@
                 <select id="comboBoxPracticas">
                     <option value="" disabled selected>Selecciona una práctica</option>
                     <option value="practica1">Práctica 1: Etiquetas de agrupamiento</option>
-                    <option value="practica2">Otra práctica</option>
+                    <option value="practica2">Práctica 3: Etiquetas semánticas de HTML 5</option>
                     <!-- Agrega más opciones según sea necesario -->
                 </select>
             </div>
@@ -102,10 +102,10 @@
                 resultado: "../Etiquetas-de-agrupacion/index.html"
             },
             practica2: {
-                titulo: "Otra práctica",
-                descripcion: "Descripción de otra práctica.",
-                elementos: ["<div>", "<span>", "<p>"],
-                resultado: "../Otra-practica/index.html"
+                titulo: "Etiquetas semánticas de HTML 5",
+                descripcion: "Esta práctica muestra cómo usar etiquetas semánticas como <header>, <main>, <footer>, <article>, y <section>.",
+                elementos: ["<header>", "<main>", "<footer>", "<article>", "<section>"],
+                resultado: "../html5-semantic-tags/index.html"
             }
         };
 
