--- a/Programacion-Web-2025/Programacion-Web-2025.html
+++ b/Programacion-Web-2025/Programacion-Web-2025.html
@@ -66,6 +66,7 @@
                     <option value="" disabled selected>Selecciona una práctica</option>
                     <option value="practica1">Práctica 1: Etiquetas de agrupamiento</option>
                     <option value="practica2">Práctica 2: Etiquetas semánticas de HTML 5</option>
+                    <option value="practica3">Práctica 3: Creacion de formularios</option>
                     <!-- Agrega más opciones según sea necesario -->
                 </select>
             </div>
@@ -106,6 +107,12 @@
                 descripcion: "Esta práctica muestra cómo usar etiquetas semánticas como <header>, <main>, <footer>, <article>, y <section>.",
                 elementos: ["<header>", "<main>", "<footer>", "<article>", "<section>"],
                 resultado: "../html5-semantic-tags/index.html"
+            },
+            practica3: {
+                titulo: "Creacion de formularios",
+                descripcion: "Esta practica muestra como crear formularios en HTML y como se pueden utilizar para enviar informacion.",
+                elementos: ["<form>", "<input>", "<button>", "<select>", "<textarea>"],
+                resultado: "../Creacion-de-formularios/index.html"
             }
         };
 
