Practica de formularios

--- a/Programacion-Web-2025/Programacion-Web-2025.html
+++ b/Programacion-Web-2025/Programacion-Web-2025.html
@@ -111,7 +111,7 @@
             practica3: {
                 titulo: "Creacion de formularios",
                 descripcion: "Esta practica muestra como crear formularios en HTML y como se pueden utilizar para enviar informacion.",
-                elementos: ["<form>", "<input>", "<button>", "<select>", "<textarea>"],
+                elementos: ["<form>", "<input>", "<button>", "<select>", "<textarea>", "<label>", "<option>"],
                 resultado: "../Creacion-de-formularios/index.html"
             }
         };
