Practica de validacion de expresiones

--- a/Programacion-Web-2025/Programacion-Web-2025.html
+++ b/Programacion-Web-2025/Programacion-Web-2025.html
@@ -67,6 +67,7 @@
                     <option value="practica1">Práctica 1: Etiquetas de agrupamiento</option>
                     <option value="practica2">Práctica 2: Etiquetas semánticas de HTML 5</option>
                     <option value="practica3">Práctica 3: Creacion de formularios</option>
+                    <option value="practica4">Práctica 4: validaciones de expresiones con formularios</option>
                     <!-- Agrega más opciones según sea necesario -->
                 </select>
             </div>
@@ -113,6 +114,12 @@
                 descripcion: "Esta practica muestra como crear formularios en HTML y como se pueden utilizar para enviar informacion.",
                 elementos: ["<form>", "<input>", "<button>", "<select>", "<textarea>", "<label>", "<option>"],
                 resultado: "../Creacion-de-formularios/index.html"
+            },
+            practica4: {
+                titulo: "validaciones de expresiones con formularios",
+                descripcion: "Esta practica muestra como validar expresiones en formularios para que el usuario ingrese informacion correcta.",
+                elementos: ["<form>","<input>","<label>","<select>"],
+                resultado: "../Validacion-de-expresiones/index.html"
             }
         };
 
