Incersion del mapa

--- a/Pruebas/index.html
+++ b/Pruebas/index.html
@@ -9,18 +9,14 @@
       integrity="sha256-o9N1j8RErjz5jH1f8g1z8F6l+9xkzQ3lq2v2k5f8k9k="
       crossorigin=""
     />
+    <!-- Incluye el CSS personalizado -->
+    <link rel="stylesheet" href="styles.css" />
     <!-- Incluye el script de Leaflet -->
     <script
       src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
       integrity="sha256-o9N1j8RErjz5jH1f8g1z8F6l+9xkzQ3lq2v2k5f8k9k="
       crossorigin=""
     ></script>
-    <style>
-      #map {
-        height: 500px;
-        width: 100%;
-      }
-    </style>
   </head>
   <body>
     <h1>Mapa Meteorológico</h1>
