--- a/Validacion-de-expresiones/index.html
+++ b/Validacion-de-expresiones/index.html
@@ -11,22 +11,27 @@
     <form action="#" method="post">
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" name="nombre" required>
+        <title>Obligatorio: Introduzca su nombre</title>
         <br><br>
 
         <label for="password">Contraseña:</label>
         <input type="password" id="password" name="password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" minlength="8" maxlength="12">
+        <title>La contraseña debe tener al menos 8 caracteres, una mayúscula, una minúscula y un número</title>
         <br><br>
 
         <label for="email">Correo Electrónico:</label>
         <input type="email" id="email" name="email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
+        <title>Introduzca un corrreo valido</title>
         <br><br>
 
         <label for="edad">Edad:</label>
         <input type="number" id="edad" name="edad" min="1" max="120" required pattern="[0-9]+{1,3}">
+        <title>Obligatorio: Introduzca su edad</title>
         <br><br>
 
         <label for="fecha">Fecha de Nacimiento:</label>
         <input type="date" id="fecha" name="fecha" required>
+        <title>Introduzca su fecha de nacimento</title>
         <br><br>
 
         <label for="genero">Género:</label>
