--- a/Validacion-de-expresiones/index.html
+++ b/Validacion-de-expresiones/index.html
@@ -11,6 +11,8 @@
     <form action="#" method="post">
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" name="nombre" required>
+        <!--Expresion regular para los numeros de control (C|M|D)?[0-9]{2}39[0-9]{4}
+        minlength="8" maxlength="10"-->
         <title>Obligatorio: Introduzca su nombre</title>
         <br><br>
 
