Modificaion de la barra de navegacion

--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
                     Otro proyecto o mas bien proyectos, son el de modificar videojuegos, ya que me gustaria poder modificar videojuegos y poder crear mis propios mods en muchos juegos y usarlos para la practica de la creacion de videojuegos.
                     
                 </p>
+
+                <p>
+                    En cuanto a proyectos escolares, estoy participado en un proyecto de redes meteorologicas para la captura de datos
+                    y hacer un aplicacion web para la visualizacion de los datos capturados.
+                </p>
         </div>
     </div>
     <footer>
