Se añadieron el resto de la practicas

--- a/Programacion-Web-2025/Programacion-Web-2025.html
+++ b/Programacion-Web-2025/Programacion-Web-2025.html
@@ -68,6 +68,11 @@
                     <option value="practica2">Práctica 2: Etiquetas semánticas de HTML 5</option>
                     <option value="practica3">Práctica 3: Creacion de formularios</option>
                     <option value="practica4">Práctica 4: validaciones de expresiones con formularios</option>
+                    <option value="practica5">Práctica 5: Arreglos y objetos en JavaScript</option>
+                    <option value="practica6">Práctica 6: Clases en JavaScript</option>
+                    <option value="practica7">Práctica 7: Procesamiento de archivo XML</option>
+                    <option value="practica8">Práctica 8: Gestión de Clientes con XHR y LocalStorage</option>
+                    <option value="practica9">Práctica 9: Hola Mundo en JavaScript</option>
                     <!-- Agrega más opciones según sea necesario -->
                 </select>
             </div>
@@ -120,6 +125,36 @@
                 descripcion: "Esta practica muestra como validar expresiones en formularios para que el usuario ingrese informacion correcta.",
                 elementos: ["<form>","<input>","<label>","<select>"],
                 resultado: "../Validacion-de-expresiones/index.html"
+            },
+            practica5: {
+                titulo: "Arreglos y objetos en JavaScript",
+                descripcion: "Ejemplo de uso de arreglos tradicionales y funciones en JavaScript.",
+                elementos: ["<script>", "document.write", "document.getElementById", "innerText"],
+                resultado: "../ArrayObjetos/inicio.html"
+            },
+            practica6: {
+                titulo: "Clases en JavaScript",
+                descripcion: "Uso de clases, constructores y métodos en JavaScript para modelar objetos.",
+                elementos: ["class", "constructor", "métodos", "document.getElementById", "innerHTML"],
+                resultado: "../Clases/inicio.html"
+            },
+            practica7: {
+                titulo: "Procesamiento de archivo XML",
+                descripcion: "Carga y procesamiento de datos XML usando XMLHttpRequest y fetch.",
+                elementos: ["XMLHttpRequest", "fetch", "responseXML", "DOMParser", "innerHTML"],
+                resultado: "../ProcesaXML/inicio.html"
+            },
+            practica8: {
+                titulo: "Gestión de Clientes con XHR y LocalStorage",
+                descripcion: "Gestión de clientes usando XML, XHR, LocalStorage y exportación a XML.",
+                elementos: ["XMLHttpRequest", "localStorage", "Blob", "DOM", "<form>", "<button>", "<ul>", "<li>"],
+                resultado: "../usoXHR/index.html"
+            },
+            practica9: {
+                titulo: "Hola Mundo en JavaScript",
+                descripcion: "Ejemplo básico de integración de JavaScript en HTML.",
+                elementos: ["<script>", "console.log", "document.getElementById", "innerHTML"],
+                resultado: "../Hola mundo/principal.html"
             }
         };
 
